Adding some changes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(40,42,54);
-    color: rgb(117, 10, 131);
+    color: whitesmoke;
     font-family:sans-serif;
     display: flex;
     flex-direction: column;
