--- a/style.css
+++ b/style.css
@@ -8,6 +8,20 @@ body{
     justify-content: center;
 }
 
+#text{
+    width: 800px;
+    height: 200px;
+    border-radius: 10px;
+    background-color: rgb(57,59,74);
+    font-style: semibold;
+    color: whitesmoke;
+    padding: 20px;
+    font-size: 24px;
+    line-height: 1.5;
+    margin-top: 20px;
+    overflow-y: auto;
+}
+
 .title{
     font-size: 40px;
     font-weight: bold;
