--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 body{
     background-color: rgb(40,42,54);
     color: whitesmoke;
-    font-family:sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.stats {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    background-color: rgb(57,59,74);
+    padding: 20px 40px;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
 #text{
     width: 800px;
-    height: 200px;
+    height: 180px;
     border-radius: 10px;
     background-color: rgb(57,59,74);
     font-style: semibold;
@@ -22,12 +33,45 @@ body{
     overflow-y: auto;
 }
 
+#user-input{
+    width: 800px;
+    height: 200px;
+    border-radius: 10px;
+    background-color: rgb(57,59,74);
+    font-style: semibold;
+    color: whitesmoke;
+    padding: 20px;
+    font-size: 24px;
+    line-height: 1.5;
+   
+    border: none;
+    outline: none;
+}
+
 .title{
     font-size: 40px;
     font-weight: bold;
     margin-top: 20px;
     color: whitesmoke;
 }
+
+button {
+    background-color: #bd93f9;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 20px 10px;
+    transition: background-color 0.2s;
+}
+
+button:hover {
+    background-color: #ff79c6;
+}
+
+
 .container{
     display: flex;
     flex-direction: column;
@@ -38,7 +82,7 @@ body{
     gap: 20px;
     margin-top: 50px;
     width: 1200px;
-    height: 600px;
+    height: 800px;
     border-radius: 10px;
     background-color:rgb(68,71,90);
 }
