--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body{
     display: flex;
     justify-content: center;
     gap: 40px;
+    font-weight: bold;
+    font-size: 20px;
     background-color: rgb(57,59,74);
     padding: 20px 40px;
     border-radius: 15px;
@@ -59,9 +61,11 @@ button {
     background-color: #bd93f9;
     color: white;
     border: none;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 20px;
     cursor: pointer;
     margin: 20px 10px;
     transition: background-color 0.2s;
